# cmake-template

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: project-nameConfig.cmake.in
source/: CMakeLists.txt
